[package]
name = "ick"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features=["derive"] }
clap-verbosity-flag = "3.0.4"
env_logger = "0.11.8"
keepass = "0.8.12"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.0", features = ["Win32", "Win32_Security", "Win32_Security_Credentials" ] }

[dev-dependencies]
serial_test = "3.2.0"

[lints.clippy]
indexing_slicing = "deny"
unwrap_used = "deny"
panic = "deny"
missing_safety_doc = "deny"
undocumented_unsafe_blocks = "deny"

[lib]
doctest = false
