[package]
name = "ick"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
clap = { version = "4.5.53", features=["derive"] }
clap-verbosity-flag = "3.0.4"
env_logger = "0.11.8"
keepass = "0.8.16"
keeper-secrets-manager-core = "17.0.3"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32", "Win32_Security", "Win32_Security_Credentials" ] }

[dev-dependencies]
serial_test = "3.2.0"

[lints.clippy]
indexing_slicing = "deny"
unwrap_used = "deny"
panic = "deny"
missing_safety_doc = "deny"
undocumented_unsafe_blocks = "deny"

[lib]
doctest = false
